--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -10,8 +10,8 @@
     <uses-permission android:name="cyanogenmod.permission.MANAGE_REMOTE_PREFERENCES" />
 
     <uses-sdk
-        android:minSdkVersion="24"
-        android:targetSdkVersion="24"/>
+        android:minSdkVersion="26"
+        android:targetSdkVersion="26"/>
 
     <application
         android:label="@string/device_settings_app_name"
@@ -37,7 +37,7 @@
             </intent-filter>
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.device" />
+                android:value="com.android.settings.category.ia.display" />
         </activity>
 
     </application>
