--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -195,6 +195,7 @@ on boot
 	write /dev/cpuset/foreground/boost/cpus 0-6
 	write /dev/cpuset/background/cpus 0-1
 	write /dev/cpuset/system-background/cpus 0-3
+	write /dev/cpuset/restricted/cpus 0-3
 
 	# add a cpuset for the camera daemon
 	# we want all cores for camera
