msm8953-common: flashlight: reduce yellow tone

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -200,6 +200,10 @@ on boot
     chown system system /sys/class/backlight/panel0-backlight/brightness
     chown system system /sys/class/backlight/panel0-backlight/max_brightness
 
+    # Reduce default Yellow flashlight
+    write /sys/devices/soc/qpnp-flash-led-25/leds/led:torch_1/max_brightness 0
+    write /sys/devices/soc/qpnp-flash-led-25/leds/led:flash_1/max_brightness 0
+
     # Create directory used for display
     # for backward compatibilit
     mkdir /persist/display 0770 system graphics
